# blockbuster

./: .gitignore  README.md  pyproject.toml
designs/: data-collection.md  gpu-finding.md  hacks.md  metrics.md  packaging.md  tasks.md  vanillas.md
notebooks/: vanilla-model.ipynb
scripts/vanillas/: gpt2_hf_train.py  train_gpt2_hf.py
src/blockbuster/: __init__.py  data.py  hooks.py
src/blockbuster/models/: config.py  vanillas.py
