[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockbuster"
version = "0.1.0"
description = "Robust metric testing on model blocks"
authors = [{ name = "raynardj", email = "b2ray2c@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "wandb>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blockbuster"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
